<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/wifi_config_bg"
    android:gravity="center">



    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/config_wifi_sdk"
            android:textSize="30dp" />

        <TextView
            android:id="@+id/config_wifi_demo_tv_sdk_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="version: v1.2.3"
            android:layout_marginTop="20dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_device_info"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="50dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_serial"
            android:textSize="15dp"/>

        <EditText
            android:id="@+id/app_common_device_serial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_verify_code"
            android:textSize="15dp"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/app_common_device_verify_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="40dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/next_step"
            android:onClick="onClickNext"/>

    </LinearLayout>

</RelativeLayout>